--- a/WKCLIMAD_getStarted.Rmd
+++ b/WKCLIMAD_getStarted.Rmd
@@ -40,7 +40,7 @@ output:
 
 This repository contains R code and Rdata files for working with WKCLIMAD data and responses. WKCLIMAD is an ICES workshop aimed at exploring how can the short-, medium-, and long-term influences of climate change on aquaculture, fisheries, and ecosystems be accounted for in ICES Advice.
 
-The workshop is chaired by: Mark Dickey-Collas, Kirstin Kari Holsman, and Michael Rust. More information can be found here:https://www.ices.dk/community/groups/Pages/WKCLIMAD.aspx
+More information about WKCLIMAD can be found here:https://www.ices.dk/community/groups/Pages/WKCLIMAD.aspx
 
 ## Summary:
 As managers, policy-makers, and other stakeholders become increasingly aware of the need to consider climate impacts, this workshop will develop a proposal for an operational climate-aware advisory framework. Experts are invited to join WKCLIMAD to review the recent and emergent analyses of key climate hazards to aquaculture, fisheries, and ecosystems.
@@ -58,17 +58,21 @@ We expect this to be a popular workshop and therefore may have to limit the numb
 
 In August 2021 multiple experts provided a rapid assessment of climate impacts via a Delphi approach. The code below analyses the output from that activity and produces the plots and results summarized in the WKCLIMAD report. The code below will generate the following plots:
 
-![Results of the first round of Delphi surveys.](Figs/Fig1.png){width=65%}
-![Results by category for Aquaculture](Figs/Fig2.png){width=100%}
+![Results of the first round of Delphi surveys.](Figs/Fig1_all_byTimeFrame.png){width=65%}
 
-![Results by category for Fisheries](Figs/Fig3.png){width=100%}
+
+![Results by category for Aquaculture](Figs/plot_all_aqua.png){width=100%}
+
+
+
+![Results by category for Fisheries](Figs/plot_all_fish.png){width=100%}
 
 To generate the plots above run the following code in R (be sure your workspace is within your local `WKCLIMAD` folder):
 
 ```{r plotResults, echo=TRUE, eval=F, include =T}
 
    # getwd()  should return something like:
-   # "/Users/kholsman/Documents/GitHub/WKCLIMAD"
+   # "/Users/username/Documents/GitHub/WKCLIMAD"
 
    # loads packages, data, setup, etc.
     suppressWarnings(source("R/make.R"))
@@ -151,7 +155,8 @@ To generate the plots above run the following code in R (be sure your workspace 
       facet_grid(focus~time_period)+theme_minimal()
      
     sclr <-.75
-    png("Figs/Fig1_all_byTimeFrame.png", width = 8*sclr, height = 4.5*sclr, units = "in",res = 350)
+    png("Figs/Fig1_all_byTimeFrame.png", 
+        width = 8*sclr, height = 4.5*sclr, units = "in",res = 350)
     print(p)
     dev.off()
    
@@ -174,29 +179,44 @@ To generate the plots above run the following code in R (be sure your workspace 
     # Now the top set for each focus:
     #-------------------------------------------------
     sub <- smry_w%>%filter(focus=="aquaculture",time_period=="long-term")
-    cc <- which(sub$likelihood>quantile(sub$likelihood)[4]&sub$magnitude>quantile(sub$magnitude)[4])
+    cc <- which(sub$likelihood>quantile(sub$likelihood)[4]&
+                  sub$magnitude>quantile(sub$magnitude)[4])
     highest_aqua <- aqua[which(aqua$category%in%sub[cc,]$category),]
     
     sub  <- smry_w%>%filter(focus=="fisheries",time_period=="long-term")
-    cc   <- which(sub$likelihood>quantile(sub$likelihood)[4]&sub$magnitude>quantile(sub$magnitude)[4])
+    cc   <- which(sub$likelihood>quantile(sub$likelihood)[4]&
+                    sub$magnitude>quantile(sub$magnitude)[4])
     highest_fish <- fish[which(fish$category%in%sub[cc,]$category),]
 
     p_top_fish <- ggplot()+geom_point(data=highest_fish,
-                            aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
+                            aes(x=magnitude,
+                                y=likelihood,
+                                color=confidence,
+                                shape=time_period))+
       scale_color_viridis_c()+
-      facet_wrap(.~cat_wrap,nrow=2)+theme_minimal()+ theme(strip.text = element_text(size = 5))+
-      xlim(0, 10) +ylim(0,10)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+      facet_wrap(.~cat_wrap,nrow=2)+
+      theme_minimal()+ 
+      theme(strip.text = element_text(size = 5))+
+      xlim(0, 10) +ylim(0,10)+ 
+      theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
     
     sclr <-1
-    png("Figs/top_fish.png", width = 6*sclr, height = 3*sclr, units = "in",res = 350)
+    png("Figs/top_fish.png", 
+        width = 6*sclr, height = 3*sclr, units = "in",res = 350)
     print(p_top_fish)
     dev.off()
     
     p_top_aqua <- ggplot()+geom_point(data=highest_aqua,
-                            aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
+                            aes(x=magnitude,
+                                y=likelihood,
+                                color=confidence,
+                                shape=time_period))+
       scale_color_viridis_c()+
-      facet_wrap(.~cat_wrap,nrow=2)+theme_minimal()+ theme(strip.text = element_text(size = 5))+
-      xlim(0, 10) +ylim(0,10)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+      facet_wrap(.~cat_wrap,nrow=2)+
+      theme_minimal()+ 
+      theme(strip.text = element_text(size = 5))+
+      xlim(0, 10) +ylim(0,10)+ 
+      theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
 
     png("Figs/top_aqua.png", width = 4.5*sclr, height = 3*sclr, units = "in",res = 350)
     print(p_top_aqua)
@@ -206,35 +226,50 @@ To generate the plots above run the following code in R (be sure your workspace 
     # now plot the top five most variable (based on SE)
     #-------------------------------------------------
     sub <- aqua #%>%filter(time_period=="long-term")
-    cc  <- which(sub$likelihoodCV>quantile(sub$likelihoodCV)[4]&sub$magnitudeCV>quantile(sub$magnitudeCV)[4])
+    cc  <- which(sub$likelihoodCV>quantile(sub$likelihoodCV)[4]&
+                   sub$magnitudeCV>quantile(sub$magnitudeCV)[4])
     highest_aquaSE <- aqua[which(aqua$category%in%sub[cc,]$category),]
     
     sub  <- fish#%>%filter(time_period=="long-term")
-    cc  <- which(sub$likelihoodCV>quantile(sub$likelihoodCV)[4]&sub$magnitudeCV>quantile(sub$magnitudeCV)[4])
+    cc  <- which(sub$likelihoodCV>quantile(sub$likelihoodCV)[4]&
+                   sub$magnitudeCV>quantile(sub$magnitudeCV)[4])
     highest_fishSE <- fish[which(fish$category%in%sub[cc,]$category),]
     
     # plot the top set of fisheries 
     p_top_fishSE <- ggplot(data=highest_fishSE)+
-      geom_point(aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
-      geom_linerange(aes(x=magnitude,y=likelihood,color=confidence,ymin = ylower, ymax = yupper))+
-      geom_errorbarh(aes(x=magnitude,y=likelihood,color=confidence,xmin = xlower,xmax = xupper))+
+      geom_point(aes(x=magnitude,y=likelihood,
+                     color=confidence,shape=time_period))+
+      geom_linerange(aes(x=magnitude,y=likelihood,
+                         color=confidence,ymin = ylower, ymax = yupper))+
+      geom_errorbarh(aes(x=magnitude,y=likelihood,
+                         color=confidence,xmin = xlower,xmax = xupper))+
       scale_color_viridis_c()+
-      facet_wrap(.~cat_wrap,nrow=2)+theme_minimal()+ theme(strip.text = element_text(size = 5))+
-      xlim(0, 10) +ylim(0,10)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+      facet_wrap(.~cat_wrap,nrow=2)+
+      theme_minimal()+ 
+      theme(strip.text = element_text(size = 5))+
+      xlim(0, 10) +ylim(0,10)+ 
+      theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
     
     sclr <-1
-    png("Figs/top_fish_var.png", width = 6*sclr, height = 3*sclr, units = "in",res = 350)
+    png("Figs/top_fish_var.png",
+        width = 6*sclr, height = 3*sclr, units = "in",res = 350)
     print(p_top_fishSE)
     dev.off()
     
      # plot the top set of aquaculture 
     p_top_aquaSE <- ggplot(data=highest_aquaSE)+
-      geom_point(aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
-      geom_linerange(aes(x=magnitude,y=likelihood,color=confidence,ymin = ylower, ymax = yupper))+
-      geom_errorbarh(aes(x=magnitude,y=likelihood,color=confidence,xmin = xlower,xmax = xupper))+
+      geom_point(aes(x=magnitude,y=likelihood,
+                     color=confidence,shape=time_period))+
+      geom_linerange(aes(x=magnitude,y=likelihood,
+                         color=confidence,ymin = ylower, ymax = yupper))+
+      geom_errorbarh(aes(x=magnitude,y=likelihood,
+                         color=confidence,xmin = xlower,xmax = xupper))+
       scale_color_viridis_c()+
-      facet_wrap(.~cat_wrap,nrow=2)+theme_minimal()+ theme(strip.text = element_text(size = 5))+
-      xlim(0, 10) +ylim(0,10)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+      facet_wrap(.~cat_wrap,nrow=2)+
+      theme_minimal()+ 
+      theme(strip.text = element_text(size = 5))+
+      xlim(0, 10) +ylim(0,10)+ 
+      theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
 
     png("Figs/top_aqua_var.png", width = 7*sclr, height = 3*sclr, units = "in",res = 350)
     print(p_top_aquaSE)
@@ -248,50 +283,75 @@ To generate the plots above run the following code in R (be sure your workspace 
     #                                          color = confidence))
     # geom_text(data=smry_w,aes(x=magnitude,y=likelihood,color=mnConf,shape=focus)
     sclr <-.75
-    png("Figs/Fig1a_aqua_byTimeFrame.png", width = 8*sclr, height = 3*sclr, units = "in",res = 350)
+    png("Figs/Fig1a_aqua_byTimeFrame.png", 
+        width = 8*sclr, height = 3*sclr, units = "in",res = 350)
     print(p_aqua)
     dev.off()
-    png("Figs/Fig1b_fish_byTimeFrame.png", width = 8*sclr, height = 3*sclr, units = "in",res = 350)
+    png("Figs/Fig1b_fish_byTimeFrame.png", 
+        width = 8*sclr, height = 3*sclr, units = "in",res = 350)
     print(p_fish)
     dev.off()
     
-    p2_aqua <- ggplot()+geom_point(data=smry_w%>%filter(focus=="aquaculture"),
-                            aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
+    p2_aqua <- ggplot()+
+      geom_point(data=smry_w%>%filter(focus=="aquaculture"),
+                            aes(x     = magnitude,
+                                y     = likelihood,
+                                color = confidence,
+                                shape = time_period))+
       scale_color_viridis_c()+
-      facet_wrap(.~cat_wrap)+theme_minimal()+ theme(strip.text = element_text(size = 5))
+      facet_wrap(.~cat_wrap)+theme_minimal()+ 
+      theme(strip.text = element_text(size = 5))
        
-    png("Figs/plot_all_aqua.png", width = 8, height =8, units = "in",res = 350)
+    png("Figs/plot_all_aqua.png", 
+        width = 8, height =8, units = "in",res = 350)
     print(p2_aqua)
     dev.off()
     
     p2_fish <- ggplot()+geom_point(data=smry_w%>%filter(focus=="fisheries"),
-                            aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
+                            aes(x     = magnitude,
+                                y     = likelihood,
+                                color = confidence,
+                                shape = time_period))+
       scale_color_viridis_c()+
-      facet_wrap(.~cat_wrap)+theme_minimal()+ theme(strip.text = element_text(size = 5))
-    png("Figs/plot_all_fish.png", width = 8, height =8, units = "in",res = 350)
+      facet_wrap(.~cat_wrap)+theme_minimal()+
+      theme(strip.text = element_text(size = 5))
+    png("Figs/plot_all_fish.png", 
+        width = 8, height =8, units = "in",res = 350)
     print(p2_fish)
     dev.off()
 
    
      #same plot with confidence as size of "+"
-     p2_fish_SD<- ggplot(data=smry_w%>%filter(focus=="fisheries"))+
-       geom_point(aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
-        geom_linerange(aes(x=magnitude,y=likelihood,color=confidence,ymin = ylower, ymax = yupper))+
-       geom_errorbarh(aes(x=magnitude,y=likelihood,color=confidence,xmin = xlower,xmax = xupper))+
+     p2_fish_SD<- ggplot(data=smry_w%>%
+                           filter(focus=="fisheries"))+
+       geom_point(aes(x=magnitude,y=likelihood,
+                      color=confidence,shape=time_period))+
+        geom_linerange(aes(x=magnitude,y=likelihood,
+                           color=confidence,ymin = ylower, ymax = yupper))+
+       geom_errorbarh(aes(x=magnitude,y=likelihood,
+                          color=confidence,xmin = xlower,xmax = xupper))+
       scale_color_viridis_c()+
-      facet_wrap(.~cat_wrap)+theme_minimal()+ theme(strip.text = element_text(size = 5))
-    png("Figs/plot_all_fish_SE.png", width = 8, height =8, units = "in",res = 350)
+      facet_wrap(.~cat_wrap)+theme_minimal()+ 
+       theme(strip.text = element_text(size = 5))
+    png("Figs/plot_all_fish_SE.png", 
+        width = 8, height =8, units = "in",res = 350)
     print(p2_fish_SD)
     dev.off()
     
     #same plot with confidence as size of "+"
-     p2_aqua_SD<- ggplot(data=smry_w%>%filter(focus=="aquaculture"))+
-       geom_point(aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
-        geom_linerange(aes(x=magnitude,y=likelihood,color=confidence,ymin = ylower, ymax = yupper))+
-       geom_errorbarh(aes(x=magnitude,y=likelihood,color=confidence,xmin = xlower,xmax = xupper))+
+     p2_aqua_SD<- ggplot(data=smry_w%>%
+                           filter(focus=="aquaculture"))+
+       geom_point(aes(x=magnitude,y=likelihood,
+                      color=confidence,shape=time_period))+
+        geom_linerange(aes(x=magnitude,y=likelihood,
+                           color=confidence,ymin = ylower, ymax = yupper))+
+       geom_errorbarh(aes(x=magnitude,y=likelihood,
+                          color=confidence,xmin = xlower,xmax = xupper))+
       scale_color_viridis_c()+
-      facet_wrap(.~cat_wrap)+theme_minimal()+ theme(strip.text = element_text(size = 5))
-    png("Figs/plot_all_aqua_SE.png", width = 8, height =8, units = "in",res = 350)
+      facet_wrap(.~cat_wrap)+theme_minimal()+ 
+       theme(strip.text = element_text(size = 5))
+    png("Figs/plot_all_aqua_SE.png", 
+        width = 8, height =8, units = "in",res = 350)
     print(p2_aqua_SD)
     dev.off()
     
